2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/image.c:
	* lib/errmsg.c: no need to check for fl_vsnprintf anymore.

2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Imakefile:
	* fd2ps/Imakefile:
	* fdesign/Imakefile:
	* gl/Imakefile:
	* image/Imakefile:
	* lib/Imakefile: pass the expected -DHAVE_SNPRINTF options to the
	compiler.

2003-04-17  Angus Leeming  <angus.leeming@btopenworld.com>

	Make fl_snprintf private.

	* lib/include/flsnprintf.h: moved to lib/private/flsnprintf.h.
	* lib/include/Imakefile: remove flsnprintf.h.

	* lib/forms.h:
	* lib/include/forms.h: regenerated.

	* fdesign/fd_attribs.c:
	* image/image.c:
	* image/image_io_filter.c:
	* image/image_postscript.c:
	* lib/choice.c:
	* lib/cmd_br.c:
	* lib/events.c:
	* lib/flresource.c:
	* lib/fselect.c:
	* lib/goodie_alert.c:
	* lib/goodie_choice.c:
	* lib/goodie_msg.c:
	* lib/goodie_salert.c:
	* lib/version.c:
	* lib/xpopup.c: add #include "private/flsnprintf.h".

2003-04-17  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/Imakefile (EXTRA_INCLUDES): add $(XPMINC)

2003-04-17  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Imakefile:
	* fd2ps/Imakefile:
	* fdesign/Imakefile:
	* gl/Imakefile:
	* image/Imakefile:
	* lib/Imakefile: don't pass -Iprivate to the complier.

	* fdesign/fd_super.c:
	* fdesign/sp_browser.c:
	* fdesign/sp_choice.c:
	* fdesign/sp_counter.c:
	* fdesign/sp_dial.c:
	* fdesign/sp_menu.c:
	* fdesign/sp_positioner.c:
	* fdesign/sp_xyplot.c:
	* image/image_postscript.c:
	* image/postscript.c:
	* image/ps_core.c:
	* image/ps_draw.c:
	* image/ps_text.c:
	* lib/browser.c:
	* lib/canvas.c:
	* lib/choice.c:
	* lib/counter.c:
	* lib/dial.c:
	* lib/flinternal.h:
	* lib/formbrowser.c:
	* lib/menu.c:
	* lib/objects.c:
	* lib/positioner.c:
	* lib/scrollbar.c:
	* lib/sldraw.c:
	* lib/slider.c:
	* lib/textbox.c:
	* lib/thumbwheel.c:
	* lib/valuator.c:
	* lib/xyplot.c: associated changes to the #include directives.
