@@ -152,15 +152,15 @@
  *
  * If HAVE_SNPRINTF is defined this module will not produce code for
  * snprintf and vsnprintf, unless PREFER_PORTABLE_SNPRINTF is defined as well,
- * causing this portable version of snprintf to be called portable_snprintf
- * (and portable_vsnprintf).
+ * causing this portable version of snprintf to be called fl_portable_snprintf
+ * (and fl_portable_vsnprintf).
  */
 /* #define HAVE_SNPRINTF */
 
 /* Define PREFER_PORTABLE_SNPRINTF if your system does have snprintf and
  * vsnprintf but you would prefer to use the portable routine(s) instead.
- * In this case the portable routine is declared as portable_snprintf
- * (and portable_vsnprintf) and a macro 'snprintf' (and 'vsnprintf')
+ * In this case the portable routine is declared as fl_portable_snprintf
+ * (and fl_portable_vsnprintf) and a macro 'snprintf' (and 'vsnprintf')
  * is defined to expand to 'portable_v?snprintf' - see file snprintf.h .
  * Defining this macro is only useful if HAVE_SNPRINTF is also defined,
  * but does does no harm if defined nevertheless.
@@ -189,7 +189,7 @@
 /* Define NEED_V?ASN?PRINTF macros if you need library extension
  * routines asprintf, vasprintf, asnprintf, vasnprintf respectively,
  * and your system library does not provide them. They are all small
- * wrapper routines around portable_vsnprintf. Defining any of the four
+ * wrapper routines around fl_portable_vsnprintf. Defining any of the four
  * NEED_V?ASN?PRINTF macros automatically turns off NEED_SNPRINTF_ONLY
  * and turns on PREFER_PORTABLE_SNPRINTF.
  *
@@ -309,23 +309,23 @@ int vasnprintf (char **ptr, size_t str_m, const char *fmt, va_list ap);
 #define va_copy(ap2,ap) ap2 = ap
 #endif
 
+#if 0
 #if defined(HAVE_SNPRINTF)
-/* declare our portable snprintf  routine under name portable_snprintf  */
-/* declare our portable vsnprintf routine under name portable_vsnprintf */
+/* declare our portable snprintf  routine under name fl_portable_snprintf  */
+/* declare our portable vsnprintf routine under name fl_portable_vsnprintf */
 #else
 /* declare our portable routines under names snprintf and vsnprintf */
-#define portable_snprintf snprintf
+#define fl_portable_snprintf snprintf
 #if !defined(NEED_SNPRINTF_ONLY)
-#define portable_vsnprintf vsnprintf
+#define fl_portable_vsnprintf vsnprintf
 #endif
 #endif
+#endif /* 0 */
 
 #if !defined(HAVE_SNPRINTF) || defined(PREFER_PORTABLE_SNPRINTF)
-static int
-portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...);
+int fl_portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...);
 #if !defined(NEED_SNPRINTF_ONLY)
-static int
-portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap);
+int fl_portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap);
 #endif
 #endif
 
@@ -346,7 +346,7 @@ int asprintf(char **ptr, const char *fmt, /*args*/ ...) {
 
   *ptr = NULL;
   va_start(ap, fmt);                            /* measure the required size */
-  str_l = portable_vsnprintf(NULL, (size_t) 0, fmt, ap);
+  str_l = fl_portable_vsnprintf(NULL, (size_t) 0, fmt, ap);
   va_end(ap);
   assert(str_l >= 0);        /* possible integer overflow if str_m > INT_MAX */
   *ptr = (char *) malloc(str_m = (size_t)str_l + 1);
@@ -354,7 +354,7 @@ int asprintf(char **ptr, const char *fmt, /*args*/ ...) {
   else {
     int str_l2;
     va_start(ap, fmt);
-    str_l2 = portable_vsnprintf(*ptr, str_m, fmt, ap);
+    str_l2 = fl_portable_vsnprintf(*ptr, str_m, fmt, ap);
     va_end(ap);
     assert(str_l2 == str_l);
   }
@@ -371,14 +371,14 @@ int vasprintf(char **ptr, const char *fmt, va_list ap) {
   { va_list ap2;
     va_copy(ap2, ap);  /* don't consume the original ap, we'll need it again */
                        /* measure the required size: */
-    str_l = portable_vsnprintf(NULL, (size_t) 0, fmt, ap2);
+    str_l = fl_portable_vsnprintf(NULL, (size_t) 0, fmt, ap2);
     va_end(ap2);
   }
   assert(str_l >= 0);        /* possible integer overflow if str_m > INT_MAX */
   *ptr = (char *) malloc(str_m = (size_t)str_l + 1);
   if (*ptr == NULL) { errno = ENOMEM; str_l = -1; }
   else {
-    int str_l2 = portable_vsnprintf(*ptr, str_m, fmt, ap);
+    int str_l2 = fl_portable_vsnprintf(*ptr, str_m, fmt, ap);
     assert(str_l2 == str_l);
   }
   return str_l;
@@ -392,7 +392,7 @@ int asnprintf (char **ptr, size_t str_m, const char *fmt, /*args*/ ...) {
 
   *ptr = NULL;
   va_start(ap, fmt);                            /* measure the required size */
-  str_l = portable_vsnprintf(NULL, (size_t) 0, fmt, ap);
+  str_l = fl_portable_vsnprintf(NULL, (size_t) 0, fmt, ap);
   va_end(ap);
   assert(str_l >= 0);        /* possible integer overflow if str_m > INT_MAX */
   if ((size_t)str_l + 1 < str_m) str_m = (size_t)str_l + 1;      /* truncate */
@@ -404,7 +404,7 @@ int asnprintf (char **ptr, size_t str_m, const char *fmt, /*args*/ ...) {
     else {
       int str_l2;
       va_start(ap, fmt);
-      str_l2 = portable_vsnprintf(*ptr, str_m, fmt, ap);
+      str_l2 = fl_portable_vsnprintf(*ptr, str_m, fmt, ap);
       va_end(ap);
       assert(str_l2 == str_l);
     }
@@ -421,7 +421,7 @@ int vasnprintf (char **ptr, size_t str_m, const char *fmt, va_list ap) {
   { va_list ap2;
     va_copy(ap2, ap);  /* don't consume the original ap, we'll need it again */
                        /* measure the required size: */
-    str_l = portable_vsnprintf(NULL, (size_t) 0, fmt, ap2);
+    str_l = fl_portable_vsnprintf(NULL, (size_t) 0, fmt, ap2);
     va_end(ap2);
   }
   assert(str_l >= 0);        /* possible integer overflow if str_m > INT_MAX */
@@ -432,7 +432,7 @@ int vasnprintf (char **ptr, size_t str_m, const char *fmt, va_list ap) {
     *ptr = (char *) malloc(str_m);
     if (*ptr == NULL) { errno = ENOMEM; str_l = -1; }
     else {
-      int str_l2 = portable_vsnprintf(*ptr, str_m, fmt, ap);
+      int str_l2 = fl_portable_vsnprintf(*ptr, str_m, fmt, ap);
       assert(str_l2 == str_l);
     }
   }
@@ -447,24 +447,21 @@ int vasnprintf (char **ptr, size_t str_m, const char *fmt, va_list ap) {
 #if !defined(HAVE_SNPRINTF) || defined(PREFER_PORTABLE_SNPRINTF)
 
 #if !defined(NEED_SNPRINTF_ONLY)
-static int
-portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...) {
+int fl_portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...) {
   va_list ap;
   int str_l;
 
   va_start(ap, fmt);
-  str_l = portable_vsnprintf(str, str_m, fmt, ap);
+  str_l = fl_portable_vsnprintf(str, str_m, fmt, ap);
   va_end(ap);
   return str_l;
 }
 #endif
 
 #if defined(NEED_SNPRINTF_ONLY)
-static int
-portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...) {
+int fl_portable_snprintf(char *str, size_t str_m, const char *fmt, /*args*/ ...) {
 #else
-static int
-portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap) {
+int fl_portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap) {
 #endif
 
 #if defined(NEED_SNPRINTF_ONLY)
@@ -846,25 +843,3 @@ portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap) {
                       written to the buffer if it were large enough */
 }
 #endif
-
-/* added by Angus Leeming, the xforms project */
-#if defined(HAVE_SNPRINTF)
-#define portable_snprintf snprintf
-#define portable_vsnprintf vsnprintf
-#endif
-
- int fl_snprintf(char *str, size_t str_m, const char *fmt, ...)
-{
-    int result;
-    va_list args;
-    va_start(args, fmt);
-    result = portable_vsnprintf(str, str_m, fmt, args);
-    va_end(args);
-    return result;
-}
-
-
-int fl_vsnprintf(char *str, size_t str_m, const char *fmt, va_list args)
-{
-    return portable_vsnprintf(str, str_m, fmt, args);
-}
